@@ -858,7 +858,7 @@ newgui maps [
 ]
 
 varslist1 = [ maprotate spawnrotate selfdamage trialdamage teamdamage spawnhealth maxhealth maxhealthvampire actorscale minresizescale maxresizescale maxcarry regenguard regenhealth regenextra regenaffinity kamikaze pointlimit capturelimit captureresetdelay ]
-varslist2 = [ defendlimit defendpoints defendoccupy defendflags bomberlimit bomberresetdelay bomberspeed gamespeed forcegravity forceliquidspeed forceliquidcurb forcefloorcurb forceaircurb forceslidecurb movespeed movecrawl movesprint movehover movestraight movestrafe moveinair movestepup movestepdown jumpspeed impulsespeed impulselimit impulseboost ]
+varslist2 = [ defendlimit defendpoints defendoccupy defendflags bomberlimit bomberresetdelay bomberspeed gamespeed gravityforce liquidspeedforce liquidcurbforce floorcurbforce aircurbforce slidecurbforce movespeed movecrawl movesprint movehover movestraight movestrafe moveinair movestepup movestepdown jumpspeed impulsespeed impulselimit impulseboost ]
 varslist3 = [ impulsedash impulsejump impulsemelee impulseparkour impulseparkournorm impulseallowed impulsestyle impulsecount impulsedelay impulseslide impulsemeter impulsecost impulseskate impulsesprint impulsehover impulseregen impulseregencrouch impulseregensprint impulseregenhover impulseregenmove impulseregeninair damagescale criticalchance ]
 varslist4 = [ itemsallowed hitpushscale hitslowscale deadpushscale wavepushscale waveslowscale timelimit triallimit intermlimit votelimit duelreset duelclear duellimit itemspawntime itemspawndelay itemspawnstyle itemthreshold regendelay regentime enemyspawntime enemyspawndelay enemyspawnstyle spawngrenades spawnweapon instaweapon ]
 varsmenu = [
